# reso

./: .vercelignore  Dockerfile  README.md  requirements.txt  supabase_schema.sql  vercel.json
.github/workflows/: deploy.yml
circuits/sanctions_proof/: CIRCUIT_SPEC.md
contracts/compliance_hook/: Cargo.toml
contracts/compliance_hook/src/: lib.rs  verification.rs
crypto/: paillier-demo.js
dashboard/: app-extra.js  app.html  bridge.html  console.html  docs.html  globe.js  gpu-fan.js  index.html  intro.html  landing-styles.css  landing.html  script.js  styles.css  vercel.json
docs/: ARCHITECTURE.md
docs/features/: 01-recursive-proof-folding.md  02-threshold-sanctions-oracle.md  03-timelock-disclosure.md  04-realtime-revocation.md  05-fhe-spending-limits.md  06-formal-verification.md  07-sep8-regulated-assets.md  08-claimable-balance-escrow.md  09-clawback-revocation-integration.md  10-post-quantum-readiness.md  11-anchor-kyc-bridging.md  README.md
folding/: fold-simulation.js
oracle/: __init__.py  anchor-kyc-bridge-demo.js  claimable-balance-predicate-demo.js  clawback-trigger-demo.js  main.py  revocation-registry.js  sanctions-feed.js  sep8-approval-server-demo.js  test_advanced.py  test_api.py  test_escrow.py  test_load.py  threshold-secret-sharing.js  timelock-disclosure.js
site/: index.html  styles.css
